added content and changed nav bar

--- a/index.html
+++ b/index.html
@@ -9,20 +9,28 @@
 </head>
 <body>
   <header>
-    <div>
-      <a href="index.html">
+    <nav>
+      <ul><li><a href="index.html">
         <img src="images/Lancaster's-logos_white.png" width="240" height=200">
-      </a>
-      <a href="index.html">
-        Home
-      </a>
-      <a href="">Menu</a>
-      <a href="">Reservations</a>
-      <a href="">Contact</a>
-      <a href="">About</a>
-    </div>
-    <div></div>
+        </a></li>
+        <li><a href="index.html">
+          Home
+        </a></li>
+        <li><a href="Lancaster's Dinner Menu 17 Jun 2024.pdf">Menu</a></li>
+        <li><a href="">Reservations</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">About</a></li>
+      </ul>
+    </nav>
   </header>
+  <div>
+    <h1>Lancaster's</h1>
+    <p>Discover Conscious Gastronomy in the heart of St James's</p>
+    <button>
+      <a href="">Book a Table</a>
+    </button>
+  </div>
+
   
 </body>
 </html>
