added about and reservation sections

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
   <header>
     <nav>
       <ul><li><a href="index.html">
-        <img src="images/Lancaster's-logos_white.png" width="240" height=200">
+        <img src="images/Lancaster's-logos.jpeg" width="240" height=200">
         </a></li>
         <li><a href="index.html">
           Home
         </a></li>
         <li><a href="Lancaster's Dinner Menu 17 Jun 2024.pdf">Menu</a></li>
         <li><a href="">Reservations</a></li>
-        <li><a href="">Contact</a></li>
         <li><a href="">About</a></li>
+        <li><a href="">Reviews</a></li>
+        <li><a href="">Contact</a></li>
       </ul>
     </nav>
   </header>
@@ -30,6 +31,53 @@
       <a href="">Book a Table</a>
     </button>
   </div>
+  <section id="about">
+    <div>
+    <h2>Ana Lancaster</h2>
+    <h5>Head Chef/Owner </h5>
+    <img src="images/ana-cooking.jpeg" width="60" height="60">
+  </div>
+  <div>
+    <h2>Robert Lancaster</h2>
+    <h5>Sommelier/Owner</h5>
+    <img src="images/robert-smell.jpeg" width="60" height="60" >
+  </div>
+
+    <p>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005. The essence of this combination makes up much of Fallows DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in St James’s market was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ ‘sustainable restaurant of the year’ and the Caterer award for ‘best new restaurant’</p>
+</section>
+<section id="Reservations">
+  <h2>Make a Booking</h2>
+  <div>
+    <label for="date">Choose a date:</label>
+    <input type="date" required>
+  </div>
+  <div>
+    <label for="time">Choose a time:</label>
+    <select name="time" id="time">
+      <option value="1100">11:00 AM</option>
+      <option value="1100">11:30 AM</option>
+      <option value="1100">12:00 AM</option>
+      <option value="1100">12:30 AM</option>
+    </select>
+  </div>
+  <div>
+    <label for="party-size">Number of people</label>
+    <select name="party-size" id="party-size">
+      <option value="1">1</option>
+      <option value="2">2</option>
+      <option value="3">3</option>
+      <option value="4">4</option>
+      <option value="5">5</option>
+      <option value="6">6</option>
+      <option value="7">7</option>
+      <option value="8">8</option>
+      <option value="9">9</option>
+      <option value="10">10</option>
+    </select>
+
+  </div>
+
+</section>
 
   
 </body>
