--- a/index.html
+++ b/index.html
@@ -78,6 +78,16 @@
   </div>
 
 </section>
+<section id="reviews">
+  <h2>Reviews</h2>
+  <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
+  <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
+  <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
+  <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
+</section>
+<section>
+
+</section>
 
   
 </body>
