contact + social media links

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <li><a href="">Reservations</a></li>
         <li><a href="">About</a></li>
         <li><a href="">Reviews</a></li>
-        <li><a href="">Contact</a></li>
+        <li><a href="">Contact Us</a></li>
       </ul>
     </nav>
   </header>
@@ -85,7 +85,24 @@
   <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
   <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
 </section>
-<section>
+<section id="Contact">
+  <h2>Contact Us</h2>
+  <p>We are happy to accommodate dietary requirements. Please just make a note in your reservation or let us know upon arrival.  Lancaster’s is on ground level, with an accessible bathroom situated on the same floor. </p>
+  <a href="">
+    <i class="fa-brands fa-tiktok">
+      <img src="images/social-media-icons/tiktok-brands-solid.svg" width="30" height="30">
+    </i>
+  </a>
+  <a href="https://www.instagram.com/fallowrestaurant">
+    <i class="fa-brands fa-instagram">
+      <img src="images/social-media-icons/instagram-brands-solid.svg" width="30" height="30">
+    </i>
+  </a>
+  <a href="">
+    <i class="fa-brands fa-youtube">
+      <img src="images/social-media-icons/youtube-brands-solid.svg" width="30" height="30">
+    </i>
+  </a>
 
 </section>
 
