added awards and opening times

--- a/index.html
+++ b/index.html
@@ -87,7 +87,33 @@
 </section>
 <section id="Contact">
   <h2>Contact Us</h2>
-  <p>We are happy to accommodate dietary requirements. Please just make a note in your reservation or let us know upon arrival.  Lancaster’s is on ground level, with an accessible bathroom situated on the same floor. </p>
+  <p>Keep yourself updated by following us on Instagram. For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+  <div>
+    <b>Opening times:</b>
+    <p>
+      Monday - Friday <br>
+      07:30pm - 11pm <br>
+      Saturday <br>
+      09am - 11pm <br>
+      Sunday <br>
+      11:30am - 10pm
+    </p>
+
+  </div>
+  <div>
+    <img src="images/awards/B-Corp-Logo-White-RGB.png" width="60" height="60">
+    <img src="images/awards/National-Restaurant-Awards.svg" width="60" height="60">
+    <img src="images/awards/hotdinners.svg" width="60" height="60">
+  </div>
+  <div>
+    <b>Visit us at:</b>
+    <address>
+      52 Haymarket <br>
+      London <br>
+      SW1Y 4RP
+    </address>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.2143165510934!2d-0.1330166!3d51.50928400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d1648bb62d%3A0x930a46e035a5941e!2s52%20Haymarket%2C%20London%20SW1Y%204RP!5e0!3m2!1sen!2suk!4v1730978424152!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+</div>
   <a href="">
     <i class="fa-brands fa-tiktok">
       <img src="images/social-media-icons/tiktok-brands-solid.svg" width="30" height="30">
@@ -105,6 +131,7 @@
   </a>
 
 </section>
+
 
   
 </body>
