--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </address>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.2143165510934!2d-0.1330166!3d51.50928400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d1648bb62d%3A0x930a46e035a5941e!2s52%20Haymarket%2C%20London%20SW1Y%204RP!5e0!3m2!1sen!2suk!4v1730978424152!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
-  <a href="">
+  <a href="https://www.tiktok.com/@fallow_restaurant?lang=en">
     <i class="fa-brands fa-tiktok">
       <img src="images/social-media-icons/tiktok-brands-solid.svg" width="30" height="30">
     </i>
@@ -124,7 +124,7 @@
       <img src="images/social-media-icons/instagram-brands-solid.svg" width="30" height="30">
     </i>
   </a>
-  <a href="">
+  <a href="https://www.youtube.com/channel/UCJ901NqoRaXMnIm7aOjLyuA">
     <i class="fa-brands fa-youtube">
       <img src="images/social-media-icons/youtube-brands-solid.svg" width="30" height="30">
     </i>
