--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 </section>
 <section id="Reservations">
   <h2>Make a Booking</h2>
+  <p>We are happy to accommodate dietary requirements. Please just make a note in your reservation or let us know upon arrival.  Lancaster’s is on ground level, with an accessible bathroom situated on the same floor.</p>
   <div>
     <label for="date">Choose a date:</label>
     <input type="date" required>
