--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
   <header>
     <nav>
-      <ul><li><a href="index.html">
-        <img src="images/Lancaster's-logos.jpeg" width="240" height=200">
-        </a></li>
+      <a href="index.html">
+        <img src="images/Lancaster's-logos.jpeg" width="100" height=100">
+        </a>
+      <ul>
+      
         <li><a href="index.html">
           Home
         </a></li>
