--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <header>
     <nav>
       <a href="index.html">
-        <img src="images/Lancaster's-logos.jpeg" width="100" height=100">
-        </a>
+        <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80">
+      </a>
       <ul>
-      
         <li><a href="index.html">
           Home
-        </a></li>
+            </a>
+        </li>
         <li><a href="Lancaster's Dinner Menu 17 Jun 2024.pdf">Menu</a></li>
         <li><a href="">Reservations</a></li>
         <li><a href="">About</a></li>
@@ -26,8 +26,8 @@
       </ul>
     </nav>
   </header>
-  <div>
-    <h1>Lancaster's</h1>
+  <div class="main-content">
+    <h1><img src="images/logos/whitelogo-cropped.png" width="400" height="200"></h1>
     <p>Discover Conscious Gastronomy in the heart of St James's</p>
     <button>
       <a href="">Book a Table</a>
@@ -35,107 +35,107 @@
   </div>
   <section id="about">
     <div>
-    <h2>Ana Lancaster</h2>
-    <h5>Head Chef/Owner </h5>
-    <img src="images/ana-cooking.jpeg" width="60" height="60">
-  </div>
-  <div>
-    <h2>Robert Lancaster</h2>
-    <h5>Sommelier/Owner</h5>
-    <img src="images/robert-smell.jpeg" width="60" height="60" >
-  </div>
+      <div>
+        <h2>Ana Lancaster</h2>
+        <h5>Head Chef/Owner </h5>
+        <img src="images/ana-cooking.jpeg" width="60" height="60">
+      </div>
+      <div>
+        <h2>Robert Lancaster</h2>
+        <h5>Sommelier/Owner</h5>
+        <img src="images/robert-smell.jpeg" width="60" height="60" >
+      </div>
+    </div>
 
     <p>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005. The essence of this combination makes up much of Fallows DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in St James’s market was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ ‘sustainable restaurant of the year’ and the Caterer award for ‘best new restaurant’</p>
-</section>
-<section id="Reservations">
-  <h2>Make a Booking</h2>
-  <p>We are happy to accommodate dietary requirements. Please just make a note in your reservation or let us know upon arrival.  Lancaster’s is on ground level, with an accessible bathroom situated on the same floor.</p>
-  <div>
-    <label for="date">Choose a date:</label>
-    <input type="date" required>
-  </div>
-  <div>
-    <label for="time">Choose a time:</label>
-    <select name="time" id="time">
-      <option value="1100">11:00 AM</option>
-      <option value="1100">11:30 AM</option>
-      <option value="1100">12:00 AM</option>
-      <option value="1100">12:30 AM</option>
-    </select>
-  </div>
-  <div>
-    <label for="party-size">Number of people</label>
-    <select name="party-size" id="party-size">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-      <option value="6">6</option>
-      <option value="7">7</option>
-      <option value="8">8</option>
-      <option value="9">9</option>
-      <option value="10">10</option>
-    </select>
+  </section>
+  <section id="Reservations">
+    <h2>Make a Booking</h2>
+    <p>We are happy to accommodate dietary requirements. Please just make a note in your reservation or let us know upon arrival.  Lancaster’s is on ground level, with an accessible bathroom situated on the same floor.</p>
+    <div>
+      <label for="date">Choose a date:</label>
+      <input type="date" required>
+    </div>
+    <div>
+      <label for="time">Choose a time:</label>
+        <select name="time" id="time">
+          <option value="1100">11:00 AM</option>
+          <option value="1100">11:30 AM</option>
+          <option value="1100">12:00 AM</option>
+          <option value="1100">12:30 AM</option>
+        </select>
+    </div>
+    <div>
+      <label for="party-size">Number of people</label>
+        <select name="party-size" id="party-size">
+          <option value="1">1</option>
+          <option value="2">2</option>
+          <option value="3">3</option>
+          <option value="4">4</option>
+          <option value="5">5</option>
+          <option value="6">6</option>
+          <option value="7">7</option>
+          <option value="8">8</option>
+          <option value="9">9</option>
+          <option value="10">10</option>
+        </select>
+    </div>
 
-  </div>
+  </section>
+  <section id="reviews">
+    <h2>Reviews</h2>
+    <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
+    <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
+    <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
+    <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
+  </section>
+  <section id="Contact">
+    <h2>Contact Us</h2>
+    <p>Keep yourself updated by following us on Instagram. For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+    <div>
+      <b>Opening times:</b>
+      <p>
+        Monday - Friday <br>
+        07:30pm - 11pm <br>
+        Saturday <br>
+        09am - 11pm <br>
+        Sunday <br>
+        11:30am - 10pm
+      </p>
+    </div>
+    <div>
+      <img src="images/awards/B-Corp-Logo-White-RGB.png" width="60" height="60">
+      <img src="images/awards/National-Restaurant-Awards.svg" width="60" height="60">
+      <img src="images/awards/hotdinners.svg" width="60" height="60">
+    </div>
+    <div>
+      <b>Visit us at:</b>
+      <address>
+        52 Haymarket <br>
+        London <br>
+        SW1Y 4RP
+      </address>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.2143165510934!2d-0.1330166!3d51.50928400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d1648bb62d%3A0x930a46e035a5941e!2s52%20Haymarket%2C%20London%20SW1Y%204RP!5e0!3m2!1sen!2suk!4v1730978424152!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <a href="https://www.tiktok.com/@fallow_restaurant?lang=en">
+      <i class="fa-brands fa-tiktok">
+        <img src="images/social-media-icons/tiktok-brands-solid.svg" width="30" height="30">
+      </i>
+    </a>
+    <a href="https://www.instagram.com/fallowrestaurant">
+      <i class="fa-brands fa-instagram">
+        <img src="images/social-media-icons/instagram-brands-solid.svg" width="30" height="30">
+      </i>
+    </a>
+    <a href="https://www.youtube.com/channel/UCJ901NqoRaXMnIm7aOjLyuA">
+      <i class="fa-brands fa-youtube">
+        <img src="images/social-media-icons/youtube-brands-solid.svg" width="30" height="30">
+      </i>
+    </a>
 
-</section>
-<section id="reviews">
-  <h2>Reviews</h2>
-  <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
-  <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
-  <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
-  <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
-</section>
-<section id="Contact">
-  <h2>Contact Us</h2>
-  <p>Keep yourself updated by following us on Instagram. For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
-  <div>
-    <b>Opening times:</b>
-    <p>
-      Monday - Friday <br>
-      07:30pm - 11pm <br>
-      Saturday <br>
-      09am - 11pm <br>
-      Sunday <br>
-      11:30am - 10pm
-    </p>
-
-  </div>
-  <div>
-    <img src="images/awards/B-Corp-Logo-White-RGB.png" width="60" height="60">
-    <img src="images/awards/National-Restaurant-Awards.svg" width="60" height="60">
-    <img src="images/awards/hotdinners.svg" width="60" height="60">
-  </div>
-  <div>
-    <b>Visit us at:</b>
-    <address>
-      52 Haymarket <br>
-      London <br>
-      SW1Y 4RP
-    </address>
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.2143165510934!2d-0.1330166!3d51.50928400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d1648bb62d%3A0x930a46e035a5941e!2s52%20Haymarket%2C%20London%20SW1Y%204RP!5e0!3m2!1sen!2suk!4v1730978424152!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-</div>
-  <a href="https://www.tiktok.com/@fallow_restaurant?lang=en">
-    <i class="fa-brands fa-tiktok">
-      <img src="images/social-media-icons/tiktok-brands-solid.svg" width="30" height="30">
-    </i>
-  </a>
-  <a href="https://www.instagram.com/fallowrestaurant">
-    <i class="fa-brands fa-instagram">
-      <img src="images/social-media-icons/instagram-brands-solid.svg" width="30" height="30">
-    </i>
-  </a>
-  <a href="https://www.youtube.com/channel/UCJ901NqoRaXMnIm7aOjLyuA">
-    <i class="fa-brands fa-youtube">
-      <img src="images/social-media-icons/youtube-brands-solid.svg" width="30" height="30">
-    </i>
-  </a>
-
-</section>
+  </section>
 
 
-  
+    
 </body>
 </html>
