--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
     </button>
   </div>
   <section id="about">
-    <div>
-      <div>
+    <div class="owners">
+      <div class="owner-1">
         <h2>Ana Lancaster</h2>
         <h5>Head Chef/Owner </h5>
-        <img src="images/ana-cooking.jpeg" width="60" height="60">
+        <img src="images/ana-and-rob/ana-cooking.jpeg" width="60" height="60">
       </div>
-      <div>
+      <div class="owner-2">
         <h2>Robert Lancaster</h2>
         <h5>Sommelier/Owner</h5>
-        <img src="images/robert-smell.jpeg" width="60" height="60" >
+        <img src="images/ana-and-rob/robert-smell.jpeg" width="60" height="60" >
       </div>
     </div>
 
