--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="https://kit.fontawesome.com/d49d7780b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
+  <div class="bg-fullscreen">
   <header>
     <nav>
       <a href="index.html">
@@ -56,6 +57,7 @@
     <button>
       <a href="">Book a Table</a>
     </button>
+  </div>
   </div>
   <section id="about">
     <div class="owners">
@@ -108,10 +110,20 @@
   </section>
   <section id="reviews">
     <h2>Reviews</h2>
-    <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
-    <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
-    <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
-    <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
+      <div class="cols">
+        <div>
+          <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
+        </div>
+        <div>
+          <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
+        </div>
+        <div>
+          <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
+        </div>
+        <div>
+          <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
+        </div> 
+      </div>
   </section>
   <section id="Contact">
     <h2>Contact Us</h2>
