moved sections to different pages

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             </a>
         </li>
         <li><a href="Lancaster's Dinner Menu 17 Jun 2024.pdf">Menu</a></li>
-        <li><a href="">Reservations</a></li>
-        <li><a href="">About</a></li>
-        <li><a href="">Reviews</a></li>
-        <li><a href="">Contact Us</a></li>
+        <li><a href="reservations.html">Reservations</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a href="#reviews">Reviews</a></li>
+        <li><a href="#contact">Contact Us</a></li>
       </ul>
     </nav>
     <div class="social-media-links">
@@ -58,74 +58,26 @@
       <a href="">Book a Table</a>
     </button>
   </div>
-  </div>
-  <section id="about">
-    <div class="owners">
-      <div class="owner-1">
-        <h2>Ana Lancaster</h2>
-        <h5>Head Chef/Owner </h5>
-        <img src="images/ana-and-rob/ana-cooking.jpeg" width="60" height="60">
-      </div>
-      <div class="owner-2">
-        <h2>Robert Lancaster</h2>
-        <h5>Sommelier/Owner</h5>
-        <img src="images/ana-and-rob/robert-smell.jpeg" width="60" height="40" >
-      </div>
-    </div>
-
-    <p>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005. The essence of this combination makes up much of Fallows DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in St James’s market was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ ‘sustainable restaurant of the year’ and the Caterer award for ‘best new restaurant’</p>
-  </section>
-  <section id="Reservations">
-    <h2>Make a Booking</h2>
-    <p>We are happy to accommodate dietary requirements. Please just make a note in your reservation or let us know upon arrival.  Lancaster’s is on ground level, with an accessible bathroom situated on the same floor.</p>
-    <div>
-      <label for="date">Choose a date:</label>
-      <input type="date" required>
-    </div>
-    <div>
-      <label for="time">Choose a time:</label>
-        <select name="time" id="time">
-          <option value="1100">11:00 AM</option>
-          <option value="1100">11:30 AM</option>
-          <option value="1100">12:00 AM</option>
-          <option value="1100">12:30 AM</option>
-        </select>
-    </div>
-    <div>
-      <label for="party-size">Number of people</label>
-        <select name="party-size" id="party-size">
-          <option value="1">1</option>
-          <option value="2">2</option>
-          <option value="3">3</option>
-          <option value="4">4</option>
-          <option value="5">5</option>
-          <option value="6">6</option>
-          <option value="7">7</option>
-          <option value="8">8</option>
-          <option value="9">9</option>
-          <option value="10">10</option>
-        </select>
-    </div>
-
-  </section>
+  
+  
   <section id="reviews">
     <h2>Reviews</h2>
       <div class="cols">
-        <div>
+        <div class="col-1">
           <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
         </div>
-        <div>
+        <div class="col-2">
           <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
         </div>
-        <div>
+        <div class="col-3">
           <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
         </div>
-        <div>
+        <div class="col-4">
           <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
         </div> 
       </div>
   </section>
-  <section id="Contact">
+  <section id="contact">
     <h2>Contact Us</h2>
     <p>Keep yourself updated by following us on Instagram. For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
     <div>
