changed font and reviews

--- a/index.html
+++ b/index.html
@@ -64,16 +64,21 @@
     <h2>Reviews</h2>
       <div class="cols">
         <div class="col-1">
-          <p>“Well-balanced dishes which are packed with flavour" Michelin Guide</p>
+          <i> “Well-balanced dishes which are packed with flavour" </i>
+          <p> - Michelin Guide</p>
         </div>
         <div class="col-2">
-          <p>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." Squaremeal</p>
+        <i>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." 
+        </i>
+        <p> - Squaremeal</p>
         </div>
         <div class="col-3">
-          <p>“Style and substance in equal - and environmentally conscious – measure” CONDÉ NAST TRAVELLER</p>
+          <i>“Style and substance in equal - and environmentally conscious – measure”</i>
+          <p> - CONDÉ NAST TRAVELLER</p>
         </div>
         <div class="col-4">
-          <p>“Sustainable kitchen offers charm, finesse and an enlightened drinks list" Fay Maschler</p>
+          <i>“Sustainable kitchen offers charm, finesse and an enlightened drinks list"</i>
+          <p> - Fay Maschler</p>
         </div> 
       </div>
   </section>
