--- a/index.html
+++ b/index.html
@@ -62,29 +62,31 @@
   
   <section id="reviews">
     <h2>Reviews</h2>
-      <div class="cols">
+      <div class="row-a">
         <div class="col-1">
           <i> “Well-balanced dishes which are packed with flavour" </i>
-          <p> - Michelin Guide</p>
+          <p> - Michelin Guide - </p>
         </div>
         <div class="col-2">
         <i>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." 
         </i>
-        <p> - Squaremeal</p>
+        <p> - Squaremeal - </p>
         </div>
+      </div>
+      <div class="row-b">
         <div class="col-3">
           <i>“Style and substance in equal - and environmentally conscious – measure”</i>
-          <p> - CONDÉ NAST TRAVELLER</p>
+          <p> - CONDÉ NAST TRAVELLER - </p>
         </div>
         <div class="col-4">
           <i>“Sustainable kitchen offers charm, finesse and an enlightened drinks list"</i>
-          <p> - Fay Maschler</p>
+          <p> - Fay Maschler - </p>
         </div> 
       </div>
   </section>
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Keep yourself updated by following us on Instagram. For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+    <p>Keep yourself updated by following us on <a href="https://www.instagram.com/fallowrestaurant">Instagram</a>. <br> For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
     <div>
       <b>Opening times:</b>
       <p>
@@ -112,7 +114,7 @@
     </div>
 
   </section>
-
+  <footer>©2024 Lancaster's</footer>
 
     
 </body>
