--- a/index.html
+++ b/index.html
@@ -86,33 +86,39 @@
   </section>
   <section id="contact">
     <h2>Contact Us</h2>
-    <p>Keep yourself updated by following us on <a href="https://www.instagram.com/fallowrestaurant">Instagram</a>. <br> For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
-    <div>
-      <b>Opening times:</b>
-      <p>
-        Monday - Friday <br>
-        07:30pm - 11pm <br>
-        Saturday <br>
-        09am - 11pm <br>
-        Sunday <br>
-        11:30am - 10pm
-      </p>
+      <div class="details">
+        <p>Keep yourself updated by following us on <a href="https://www.instagram.com/fallowrestaurant">
+          <i class="fa-brands fa-instagram fa-2xl">
+            
+          </i>
+        </a>. <br> For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+      </div>
+    <div class="container-contact">
+      <div class="opening-times">
+        <b>Opening times:</b>
+        <p>
+          Monday - Friday <br>
+          07:30pm - 11pm <br>
+          Saturday <br>
+          09am - 11pm <br>
+          Sunday <br>
+          11:30am - 10pm
+        </p>
+      </div>
+      <div class="awards">
+        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100">
+        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100">
+        <img src="images/awards/hotdinners.svg" width="100" height="100">
+      </div>
+      <div class="address">
+        <b>Visit us at:</b>
+        <address>
+          52 Haymarket <br>
+          London <br>
+          SW1Y 4RP
+        </address>
+      </div>
     </div>
-    <div>
-      <img src="images/awards/B-Corp-Logo-White-RGB.png" width="60" height="60">
-      <img src="images/awards/National-Restaurant-Awards.svg" width="60" height="60">
-      <img src="images/awards/hotdinners.svg" width="60" height="60">
-    </div>
-    <div>
-      <b>Visit us at:</b>
-      <address>
-        52 Haymarket <br>
-        London <br>
-        SW1Y 4RP
-      </address>
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2483.2143165510934!2d-0.1330166!3d51.50928400000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x487604d1648bb62d%3A0x930a46e035a5941e!2s52%20Haymarket%2C%20London%20SW1Y%204RP!5e0!3m2!1sen!2suk!4v1730978424152!5m2!1sen!2suk" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </div>
-
   </section>
   <footer>©2024 Lancaster's</footer>
 
