fixing reservations page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1><img src="images/logos/whitelogo-cropped.png" width="400" height="200"></h1>
     <p>Discover Conscious Gastronomy in the heart of St James's</p>
     <button>
-      <a href="">Book a Table</a>
+      <a href="reservations.html">Book a Table</a>
     </button>
   </div>
   
