added contact section to res page

--- a/reservations.html
+++ b/reservations.html
@@ -60,11 +60,11 @@
     </div>
     <p class="info">We are happy to accommodate dietary requirements. <br> Please just make a note in your reservation or let us know upon arrival. <br> Lancaster’s is on ground level, with an accessible bathroom situated on the same floor.</p>
     <div class="res-section">
-      <p>BOOK A TABLE</p>
+      <p class="book-a-table">BOOK A TABLE</p>
       <div class="inputs-for-res">
         <div class="date-input">
           <label for="date">Date:</label>
-          <input type="date" required>
+          <input type="date" id="date" required>
         </div>
         <div class="time-input">
           <label for="time">Time:</label>
@@ -101,7 +101,7 @@
             </select>
         </div>
         <div class="partysize-input">
-          <label for="party-size">Party size</label>
+          <label for="party-size">Party size:</label>
             <select name="party-size" id="party-size">
               <option value="1">1</option>
               <option value="2">2</option>
@@ -123,5 +123,43 @@
       </button>
     </div>
   </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+      <div class="details">
+        <p>Keep yourself updated by following us on <a href="https://www.instagram.com/fallowrestaurant">
+          <i class="fa-brands fa-instagram fa-2xl">
+            
+          </i>
+        </a>. <br> For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+      </div>
+    <div class="container-contact">
+      <div class="opening-times">
+        <b>Opening times:</b>
+        <p>
+          Monday - Friday <br>
+          07:30pm - 11pm <br>
+          Saturday <br>
+          09am - 11pm <br>
+          Sunday <br>
+          11:30am - 10pm
+        </p>
+      </div>
+      <div class="awards">
+        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100">
+        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100">
+        <img src="images/awards/hotdinners.svg" width="100" height="100">
+      </div>
+      <div class="address">
+        <b>Visit us at:</b>
+        <address>
+          52 Haymarket <br>
+          London <br>
+          SW1Y 4RP
+        </address>
+      </div>
+    </div>
+  </section>
+  <footer>©2024 Lancaster's Restaurant</footer>
 </body>
 </html>
