--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       </div>
     </div>
   </section>
-  <footer>©2024 Lancaster's</footer>
+  <footer>©2024 Lancaster's Restaurant</footer>
 
     
 </body>
