fixed nav bar and updated about us page

--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reservations</title>
   <link rel="stylesheet" href="styles.css">
+  <script src="https://kit.fontawesome.com/d49d7780b4.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
@@ -50,22 +51,62 @@
     </div>
   </header>
 
-
   <section id="about">
-    <div class="owners">
+    <div class="about-container">
+      <img src="images/logos/forkandknife.png" width="200" height="50">
+      <h2>About Us</h2>
+    </div>
+    <div class="story-box">
       <div class="owner-1">
-        <h2>Ana Lancaster</h2>
-        <h5>Head Chef/Owner </h5>
-        <img src="images/ana-and-rob/ana-cooking.jpeg" width="60" height="60">
+        <img src="images/ana-and-rob/ana-cooking.jpeg" width="300" height="300">
       </div>
+      <div class="story-info">
+        <h1>OUR STORY</h1>
+        <p>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005. The essence of this combination makes up much of Fallows DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in St James’s market was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ ‘sustainable restaurant of the year’ and the Caterer award for ‘best new restaurant’</p>
+    </div>
       <div class="owner-2">
-        <h2>Robert Lancaster</h2>
-        <h5>Sommelier/Owner</h5>
-        <img src="images/ana-and-rob/robert-smell.jpeg" width="60" height="40" >
+        <img src="images/ana-and-rob/robert-check.jpeg" width="400" height="300" >
       </div>
     </div>
-
-    <p>Lancaster’s was founded by chef Ana Lancaster and Sommelier Robert Lancaster in May 2005. The essence of this combination makes up much of Fallows DNA, where conscious culinary creativity meets hospitality experience and passion for wine. What followed from their meeting were a series of sold-out residencies to establish Lancaster’s as one of the most exciting restaurant concepts on the UK restaurant scene. Lancaster’s permanent home in St James’s market was established in November 2010 and has since attracted a string of awards including both the Marie Claire and GQ ‘sustainable restaurant of the year’ and the Caterer award for ‘best new restaurant’</p>
   </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+      <div class="details">
+        <p>Keep yourself updated by following us on <a href="https://www.instagram.com/fallowrestaurant">
+          <i class="fa-brands fa-instagram fa-2xl">
+            
+          </i>
+        </a>. <br> For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+      </div>
+    <div class="container-contact">
+      <div class="opening-times">
+        <b>Opening times:</b>
+        <p>
+          Monday - Friday <br>
+          07:30pm - 11pm <br>
+          Saturday <br>
+          09am - 11pm <br>
+          Sunday <br>
+          11:30am - 10pm
+        </p>
+      </div>
+      <div class="awards">
+        <img src="images/awards/B-Corp-Logo-White-RGB.png" width="100" height="100">
+        <img src="images/awards/National-Restaurant-Awards.svg" width="100" height="100">
+        <img src="images/awards/hotdinners.svg" width="100" height="100">
+      </div>
+      <div class="address">
+        <b>Visit us at:</b>
+        <address>
+          52 Haymarket <br>
+          London <br>
+          SW1Y 4RP
+        </address>
+      </div>
+    </div>
+  </section>
+  <footer>©2024 Lancaster's Restaurant</footer>
+
 </body>
 </html>
