added header transition

--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
   <title>Lancaster Restaurant</title>
   <link rel="stylesheet" href="styles.css">
   <script src="https://kit.fontawesome.com/d49d7780b4.js" crossorigin="anonymous"></script>
+  <script src="script.js"></script>
 </head>
 <body>
   <div class="bg-fullscreen">
-  <header>
+  <header id="transition-header" class="index-header">
     <nav>
       <a href="index.html">
         <img src="images/logos/Lancaster's-logos.jpeg" width="80" height=80">
@@ -62,23 +63,22 @@
   
   <section id="reviews">
     <h2>Reviews</h2>
-      <div class="row-a">
-        <div class="col-1">
+      <div class="review-slides">
+        <div class="slide">
           <i> “Well-balanced dishes which are packed with flavour" </i>
           <p> - Michelin Guide - </p>
         </div>
-        <div class="col-2">
+        <div class="slide">
         <i>“Lancaster’s is generous and indulgent, relaxed and innovative, and in short, it’s everything you want from eating out." 
         </i>
         <p> - Squaremeal - </p>
         </div>
-      </div>
-      <div class="row-b">
-        <div class="col-3">
+      
+        <div class="slide">
           <i>“Style and substance in equal - and environmentally conscious – measure”</i>
           <p> - CONDÉ NAST TRAVELLER - </p>
         </div>
-        <div class="col-4">
+        <div class="slide">
           <i>“Sustainable kitchen offers charm, finesse and an enlightened drinks list"</i>
           <p> - Fay Maschler - </p>
         </div> 
