removed first line from details in contact section

--- a/index.html
+++ b/index.html
@@ -87,11 +87,7 @@
   <section id="contact">
     <h2>Contact Us</h2>
       <div class="details">
-        <p>Keep yourself updated by following us on <a href="https://www.instagram.com/fallowrestaurant">
-          <i class="fa-brands fa-instagram fa-2xl">
-            
-          </i>
-        </a>. <br> For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
+        <p>For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
       </div>
     <div class="container-contact">
       <div class="opening-times">
