--- a/about.html
+++ b/about.html
@@ -22,8 +22,8 @@
         <li><a href="Lancaster's Dinner Menu 17 Jun 2024.pdf">Menu</a></li>
         <li><a href="reservations.html">Reservations</a></li>
         <li><a href="about.html">About</a></li>
-        <li><a href="#reviews">Reviews</a></li>
-        <li><a href="#contact">Contact Us</a></li>
+        <li><a href="index.html#reviews">Reviews</a></li>
+        <li><a href="index.html#contact">Contact Us</a></li>
       </ul>
     </nav>
     <div class="social-media-links">
@@ -70,11 +70,7 @@
     </div>
   </section>
 
-  <section id="contact">
-    <h2>Contact Us</h2>
-      <div class="details">
-        <p>For collaborations please contact <a href="marketing@lancasters.com">marketing@lancasters.com </a> . <br> For business opportunities please contact Robert Lancaster at <a href="office@lancasters.com">office@lancasters.com</a>.</p>
-      </div>
+  <footer>
     <div class="container-contact">
       <div class="opening-times">
         <b>Opening times:</b>
@@ -101,8 +97,8 @@
         </address>
       </div>
     </div>
-  </section>
-  <footer>©2024 Lancaster's Restaurant</footer>
+    <div class="trademark">©2024 Lancaster's Restaurant</div> 
+  </footer>
 
 </body>
 </html>
