fixed res section

--- a/reservations.html
+++ b/reservations.html
@@ -134,8 +134,10 @@
       required>
       <input type="tel" id="phone" placeholder="Phone number" required>
       <input type="email" id="email" placeholder="email" required>
-      <button class="back-button">Back</button>
-      <button class="submit-button">Submit</button>
+      <div class="buttons">
+        <button class="back-button">Back</button>
+        <button class="submit-button">Submit</button>
+      </div>
     </div>
   </section>
 
